<resources>
    <string name="app_name">Food Ofline Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_would">What would you like to eat ?</string>
    <string name="home">Home</string>
    <string name="over">Over Popular</string>
    <string name="egyption">Egyptian Meals</string>
    <string name="breakfast">Break Fast Meals</string>
    <string name="categoryName">Category Name</string>
    <string name="categories">Categories</string>
    <string name="desserts">Desserts</string>
    <string name="british">British Meals</string>
    <string name="chiecken">Chicken Breast</string>
</resources>