<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeFragment">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

    <LinearLayout
        android:id="@+id/linearHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:fontFamily="@font/myfont"
            android:textSize="@dimen/_15ssp"
            android:layout_weight="1"
            />


        <ImageView
            android:id="@+id/img_search"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_20sdp"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:fontFamily="@font/myfont"
            android:textSize="@dimen/_15ssp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_search_24"
            app:tint="@color/teal_700"
            />


    </LinearLayout>


    <TextView

        android:id="@+id/what_would_you_like"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_would"
        app:layout_constraintTop_toBottomOf="@+id/linearHome"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        android:textColor="@color/teal_700"
        />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_seafood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/what_would_you_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            />

    <TextView

        android:id="@+id/txt_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/over"
        app:layout_constraintTop_toBottomOf="@+id/rec_seafood"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        android:textColor="@color/teal_700"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_overPoular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_over"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />

    <TextView

        android:id="@+id/txt_egyption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/egyption"
        app:layout_constraintTop_toBottomOf="@+id/rec_overPoular"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        android:textColor="@color/teal_700"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_egyption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_egyption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />


    <TextView

        android:id="@+id/txt_Breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/breakfast"
        app:layout_constraintTop_toBottomOf="@+id/rec_egyption"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        android:textColor="@color/teal_700"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_Breakfast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />


            <TextView
                android:id="@+id/txt_Categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                app:layout_constraintTop_toBottomOf="@+id/rec_breakfast"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:fontFamily="@font/myfont"
                android:textColor="@color/teal_700"
                android:visibility="gone"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txt_Categories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_2sdp"

                >
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>