<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CategoriesFragment">



    <TextView

        android:id="@+id/deserts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desserts"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        android:textColor="@color/teal_700"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_desserts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/deserts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />

    <TextView

        android:id="@+id/txt_britsh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/british"
        app:layout_constraintTop_toBottomOf="@+id/rec_desserts"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        android:textColor="@color/teal_700"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/british_rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_britsh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />
    <TextView

        android:id="@+id/txt_checken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chiecken"
        app:layout_constraintTop_toBottomOf="@+id/british_rec"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        android:textColor="@color/teal_700"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chicken_rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_checken"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>